# gBenchLinAlg

./: CMakeLists.txt  README.md
jobs/: job_arma  job_eigen  job_elmpi  plot_performance.py
src/arma/: CMakeLists.txt  arma_diag.cc  arma_gemm.cc  arma_gemv.cc
src/eigen/: CMakeLists.txt  eigen_diag.cc  eigen_gemm.cc  eigen_gemv.cc
src/eigen_mkl/: .CMakeLists.txt.swp  CMakeLists.txt  eigen_mkl_diag.cc  eigen_mkl_gemm.cc  eigen_mkl_gemv.cc
src/elemental/: CMakeLists.txt  el_diag.cc  el_gemm.cc  el_gemv.cc
src/elemental_mpispawn/: el_gemm_mpispawn.cc  el_gemm_mpispawn_worker.cc
src/elemental_mpispawn_auto/: CMakeLists.txt  el_gemm_mpispawn_auto.cc  el_gemm_mpispawn_auto_worker.cc
